--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react-router": "^6.14.1",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
+    "semantic-ui-css": "^2.5.0",
+    "semantic-ui-react": "^2.1.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
